# 6homework

./: CMakeLists.txt  main.cpp  move.cpp
include/: container.h  forward_list.h  ilist.h  list.h  serial_container.h
src/: forward_list.ipp  ilist.ipp  list.ipp  serial_container.ipp
